--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,70 +1,43 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: '[Spot](www.getspot.io) is a no-code platform that enables you to automate workflows and construct AI tools and agents effortlessly. Enhance your workflows by integrating a variety of powerful tools, such as:'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
-
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
+In this documentation we provide all the information you will need to become a master at using Spot. Below, you will find all the most important sections of the documentation and in the navigation bar on the left, you can find even more information about every module in the platform.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Your First Tutorial"
+    icon="play"
+    href="YFT"
   >
-    Get your docs set up locally for easy development
+    Learn more about how to build your first workflow
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="Workflow Builder"
+    icon="screwdriver-wrench"
+    href="Workflow Builder"
   >
-    Preview your changes before you push to make sure they're perfect
+    Learn more about the canvas in which you can build your apps and workflows 
   </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Integrations"
+    icon="link"
+    href="Integration Modules"
   >
     Customize your docs to your company's colors and brands
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
+    title="Agents"
+    icon="Robot"
     href="https://mintlify.com/docs/api-playground/openapi"
   >
     Automatically generate endpoints from an OpenAPI spec
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
+    title="AI Models"
     icon="stars"
-    href="https://mintlify.com/customers"
+    href="AI"
   >
     Check out our showcase of our favorite documentation
   </Card>
