--- a/AI/AI Image Transformation.mdx
+++ b/AI/AI Image Transformation.mdx
@@ -3,13 +3,13 @@ title: 'AI Image Transformation'
 description: 'Generate or transform images using source images and advanced techniques such as style transfer or conditional generation.'
 ---
 
-The `AI Image Transformation` module is capable of using any of the state-of-the-art AI models to generate images from another image and a prompt instruction. 
+The `AI Image Transformation` module can use any of the state-of-the-art AI models to generate images from another image and a prompt instruction. 
 
-**You can use this module to change the style of your photos, create alternative images of your face and much more**
+**You can use this module to change the style of your photos, create alternative images of your face, and much more**
 
 The `AI Image Transformation` module has **two inputs** and **one output**:
 
-- **Input**: `Prompt`, a description of the image the model should generate, it should include artistic references and art styles.
+- **Input**: `Prompt`, describes the image the model should generate, including artistic references and styles.
 - **Output**: `Image`, returns the output from the AI model based on the `Prompt` inputs provided.
 
 - **Configs**: `width` and `height` of the image generated
