--- a/AI/Models.mdx
+++ b/AI/Models.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Model Comparison'
-description: 'Compare the AI models that we provide access in Spot'
+Description: 'Compare the AI models we access in Spot.'
 ---
 
-The `AI text generation` module is capable of using any of the models below to generate text. 
+The `AI text generation` module can generate text using any of the models below. 
 
 | Model             | Pricing                                                 | Provider   | Release Date | Multilingual | Code Capabilities | Best Use Cases                                                    |
 |-------------------|----------------------------------------------------------|------------|--------------|--------------|-------------------|-------------------------------------------------------------------|
@@ -17,7 +17,7 @@ The `AI text generation` module is capable of using any of the models below to g
 
 Please note that the information provided is based on publicly available data and may not be entirely accurate or up-to-date, especially for models with limited public information.
 
-The image AI modules are capable of using any of the models below to generate images. 
+The image AI modules can generate images from any of the models below.
 
 Here's an updated table with pricing information for various AI image models and platforms:
 
