--- a/Data Modules copy/Scrape Web Page.mdx
+++ b/Data Modules copy/Scrape Web Page.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Output TODO'
-description: 'Reads a file format input and extracts its text.'
+title: 'Read Webpage TODO'
+description: 'Reads the text present in a URL'
 ---
 
 The `Read Webpage` module is a data module that can extract the text from a specific URL.
