--- a/Data Modules/File to Text.mdx
+++ b/Data Modules/File to Text.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'File to Text FIX'
-description: 'Reads a file format input and extracts its text'
+description: 'Reads a file format input and extracts its text.'
 ---
 
-The `Read Webpage` module is a data module that can be used to exctract the text from a specific URL.
+The `Read Webpage` module is a data module that can extract the text from a specific URL.
 **You can use this module to provide live contextual information from a specific web page to an AI model.**
 
 The `Read Webpage` module has **one input** and **one output**:
