--- a/Integration Modules/GmailW.mdx
+++ b/Integration Modules/GmailW.mdx
@@ -1,17 +1,17 @@
 ---
 title: 'Gmail Sender'
-description: 'This module allows you to create and send an email directly from your gmail account'
+description: 'This module allows you to create and send an email directly from your Gmail account'
 ---
 
->**This Module requires that you connect your account in the `Linked accounts` page. Go to Settings to get this done.**
+>**This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
 
-The `Gmail Sender` module allows you to finalize a workflow with an email that can be send from your Gmail address. 
+The `Gmail Sender` module allows you to finalize a workflow with an email that can be sent from your Gmail address. 
 
-**This is particularly useful when you want to automate email outreach or receive / send reports (e.g. News reports / Competitor reports / Operational reports).**
+**This is particularly useful when you want to automate email outreach or receive / send reports (e.g., News reports / Competitor reports / Operational reports).**
 
 The `Gmail Sender` module has **three inputs**:
 
-- **Input**: Can receive multiple inputs of type `text`. The `recipient` represents the email or emails (if it is a list) that you want to send the email to. The `title` represents the subject of the email and the `body` represents the body of the email.
-- **Config**: If the `draft` button is enabled, emails are kept as draft in yout inbox
+- **Input**: Multiple type `text` inputs can be received. The `recipient` represents the email or emails (if it is a list) to which you want to send the email. The `title` means the email's subject, and the `body` represents the body of the email.
+- **Config**: If the `draft` button is enabled, emails are kept as drafts in your inbox
 
 <img height="200" src="GmailW.png" />
