--- a/Integration Modules/Google sheets reader.mdx
+++ b/Integration Modules/Google sheets reader.mdx
@@ -1,19 +1,21 @@
 ---
-title: 'Google Sheets Reader FIX'
+title: 'Google Sheets Reader'
 description: 'Peeks into your Google Spreadsheets and grabs the data you need for analysis or reports.'
 ---
 
->**This Module requires that you connect your account in the `Linked accounts` page. Go to Settings to get this done.**
+>**This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
 
 <img height="200" src="GSR.png" />
 
-The `Google sheets reader` module allows you to read data from a google sheets. 
+The `Google Sheets Reader` module allows you to read data from Google Sheets. 
 
-**Google sheets are processed by column, you have to maintain the first row of the google sheets for the headers where each column represents a variable.**
+**Google Sheets are processed by column; you must maintain the first row of the Google Sheets for the headers where each column represents a variable.**
 
 The `Google Sheets Reader` module has **variable outputs**:
 
-- **Outputs**: Each column header in the first row of the google sheets represents a `variable output` that will have a list composed by all the rows in each column.
-- **Config**: The google sheets file can be loaded with a link or via the google finder
+- **Outputs**: Each column header in the first row of the google sheets represents a `variable output` with a list composed of all the rows in each column.
+- **Config**: The Google Sheets file can be loaded with a link or via the Google Finder
 
-Find below an example of how you can upload a google sheets:
+Find below an example of how you can upload a Google Sheets:
+
+<img height="200" src="GSReader.png"/>
