--- a/Logic Modules/Extract Information.mdx
+++ b/Logic Modules/Extract Information.mdx
@@ -3,18 +3,18 @@ title: 'Extract Information FIX'
 description: 'Use AI to extract fields from a text and turn them into outputs'
 ---
 
-The `Extract Information` module is a logic module that can be used to exctract important information from a block of text. This module is particularly useful when extracting key variables from a text to store into a spreadsheet or database
+The `Extract Information` module is a logic module that can extract important information from a text block. This module is particularly useful when extracting key variables from a text to store in a spreadsheet or database
 
 **You can use this module to parse a complex output and extract relevant information for the workflow**
 
 The `Extract Information` module has **one input** and **variable outputs**:
 
 - **Input**: `text`, receives any text input
-- **Output**: `Text`, can have unlimited text outputs, each output requires a proper description as those are leverage by the AI agent to find the right information.
+- **Output**: `Text`, can have unlimited text outputs; each output requires a proper description as those are leveraged by the AI agent to find the right information.
 
 In this module, you can also use `Advanced Options` to select the AI model you want to use. Please find here a comparison of the models we provide: [Model Comparison](/content/text)
 
-In the image below, the input is being parsed into 2 outputs: Name and age
+In the image below, the input is being parsed into two outputs: Name and age
 
 <img height="200" src="EI.png" />
 
