--- a/AI/AI Image Generation.mdx
+++ b/AI/AI Image Generation.mdx
@@ -1,15 +1,15 @@
 ---
 title: 'AI Image Generation'
-description: 'Create images using any of the state-of-the-art image generation AI models'
+description: 'Create images using any state-of-the-art image generation AI models.'
 ---
 
-The `AI Image Generation` module is capable of using any of the state-of-the-art AI models to generate images. 
+The `AI Image Generation` module can use any of the state-of-the-art AI models to generate images. 
 
-**You can use this module to enhance your creativity, build logos, photos and article images**
+**You can use this module to enhance your creativity and build logos, photos, and article images**
 
 The `AI Image Generation` module has **one input** and **one output**:
 
-- **Input**: `Prompt`, a description of the image the model should generate, it should include artistic references and art styles.
+- **Input**: `Prompt` describes the image the model should generate, including artistic references and styles.
 - **Output**: `Image`, returns the output from the AI model based on the `Prompt` inputs provided.
 
 - **Configs**: `width` and `height` of the image generated
