--- a/Agents/WebRA.mdx
+++ b/Agents/WebRA.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Web Research Agent'
-description: 'Searches the web with a goal and compiles a report'
+description: 'Searches the web with a goal and compiles a report.'
 ---
 
-The `Web Research Agent` module searches the web across multiple websites to compile a report on a particular topic.
+The `Web Research Agent` module searches multiple websites to compile a report on a particular topic.
 
 **You can use this module to provide live contextual information from a particular topic or even to perform a report that an LLM can use to improve its results**
 
