--- a/Data Modules/Scrape Web Page.mdx
+++ b/Data Modules/Scrape Web Page.mdx
@@ -1,12 +1,14 @@
 ---
-title: 'Webpage Reader FIX'
+title: 'Webpage Reader'
 description: 'Reads the text present in a URL'
 ---
 
-The `Webpage Reader` module is a data module that can be used to exctract the text from a specific URL.
+The `Webpage Reader` module is a data module that can extract the text from a specific URL.
 **You can use this module to provide live contextual information from a specific web page to an AI model.**
 
 The `Read Webpage` module has **one input** and **one output**:
 
 - **Input**: `URL`, the link to the webpage you want to scrape
 - **Output**: `Text`, the text that was extracted from the webpage
+
+<img height="200" src="WPR.png" />
