--- a/Integration Modules/Linked.mdx
+++ b/Integration Modules/Linked.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Linked Accounts'
-description: 'You can access this page in settings to link all your accounts'
+description: 'You can access this page in settings to link all your accounts.'
 ---
 
->**The integrations will only work if its respective authentication has been granted**
+>**The integrations will only work if their respective authentication has been granted**
 
 <img height="200" src="Linked.png" />
