--- a/Logic Modules/Combine Text.mdx
+++ b/Logic Modules/Combine Text.mdx
@@ -1,18 +1,18 @@
 ---
-title: 'Combine Text FIX'
-description: 'Combine multiple text inputs in one text output'
+title: 'Combine Text'
+description: 'Combine multiple text inputs in one text output.'
 ---
 
-The `Combine Text` module is fundamental for the creation of workflows, it is mostly used to combine multiple inputs and form a more text output. 
+The `Combine Text` module is fundamental for creating workflows; it mostly combines multiple inputs and forms a more text output. 
 
 This is particularly useful when writing more complex prompts.
 
 The `Generate File` module has **variable inputs** and **one output**:
 
-- **Input**: Can receive multiple inputs of type `text`, these can be used as a dynamic input inside the prompt of the Combine Text module. Just press `+` to add as many inputs as you want.
+- **Input**: Can receive multiple inputs of type `text`; these can be used as a dynamic input inside the prompt of the Combine Text module. Just press `+` to add as many inputs as you want.
 - **Output**: `text`, the output is the prompt combined with the dynamic inputs.
 
-Below an example of `Combine text` being used to compose a prompt for a fitness workflow:
+Below is an example of `Combine text` being used to compose a prompt for a fitness workflow:
 
 In this example, each of the **six inputs** can be positioned in the text prompt as variables. 
 
@@ -20,6 +20,6 @@ In the text prompt, each input is represented as a variable inside brackets like
 
 <img height="200" src="CT.png" />
 
-Combine text enables more complext workflows to be built that utilize multiple layers of agents and AI models. For example: 
+Combining text enables more complex workflows that utilize multiple layers of agents and AI models. For example: 
 
 <img height="200" src="Complex.png" />
