--- a/Logic Modules/Extract Information.mdx
+++ b/Logic Modules/Extract Information.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Extract Information FIX'
+title: 'Extract Information'
 description: 'Use AI to extract fields from a text and turn them into outputs'
 ---
 
