--- a/YFT.mdx
+++ b/YFT.mdx
@@ -1,16 +1,30 @@
 ---
-title: 'Your First Tutorial TODO'
+title: 'Your First Tutorial'
 description: 'Start using AI to automate your life in just 5 minutes'
 ---
 
-This page will guide you through some basic video tutorials that can help you get started with Spot workflow builder.
+This page will guide you through some basic video tutorials to help you start with Spot workflow builder.
 
-## Tutorial 1: XXX
+## Tutorial 1: Meeting Transcript Summarizer
 
-<video
-  controls
-  className="w-full aspect-video"
-  src="https://www.loom.com/embed/6760ef46834d41759bb352a7f154f362?sid=90f3e5b2-a64b-4941-97e3-4e265fb574ea"
-></video>
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/-HcbcC6lD0Q?si=auDLrFDfU17OW0_f"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
-## Tutorial 2: XXX
+## Tutorial 2: Legal Documentation Expert
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/-CUQaVQZS6s?si=lsL329_rXvJueBHn"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
