--- a/AI/AI Image Transformation.mdx
+++ b/AI/AI Image Transformation.mdx
@@ -14,5 +14,5 @@ The `AI Image Transformation` module has **two inputs** and **one output**:
 
 - **Configs**: `width` and `height` of the image generated
 
-<img height="200" src="AIIT.png" />
+<img height="200" src="./AIIT.png" />
 
