--- a/Agents/WebRA.mdx
+++ b/Agents/WebRA.mdx
@@ -12,4 +12,4 @@ The `Web Research Agent` module has **one input** and **one output**:
 - **Input**: `Goal`, this is a text input describing your objective with the research
 - **Output**: `Summary`, an analysis based on the web research
 
-<img height="200" src="WRA.png" />
+<img height="200" src="./WRA.png" />
