--- a/AI/AI Image Generation.mdx
+++ b/AI/AI Image Generation.mdx
@@ -14,5 +14,5 @@ The `AI Image Generation` module has **one input** and **one output**:
 
 - **Configs**: `width` and `height` of the image generated
 
-<img height="200" src="AIIG.png" />
+<img height="200" src="./AIIG.png" />
 
