--- a/Logic Modules/Extract Information.mdx
+++ b/Logic Modules/Extract Information.mdx
@@ -16,5 +16,5 @@ In this module, you can also use `Advanced Options` to select the AI model you w
 
 In the image below, the input is being parsed into two outputs: Name and age
 
-<img height="200" src="EI.png" />
+<img height="200" src="/EI.png" />
 
