--- a/AI/AI Text Creation.mdx
+++ b/AI/AI Text Creation.mdx
@@ -13,5 +13,5 @@ The `AI text creation` module has **one input** and **one output**:
 - **Output**: `Response`, The `Response` returns the output from the AI model based on the `Context` and `Prompt` inputs provided.
 - **Configs**: `Context`, The `Context` describes the behavioral information in detail. You can reference the profession, personality traits, or behaviors you expect. For example, “you are an AI expert.”
 
-<img height="200" src="./AITC.png" />
+<img height="200" src="/AITC.png" />
 
