--- a/Agents/DA.mdx
+++ b/Agents/DA.mdx
@@ -19,8 +19,8 @@ In the example below, you can find an agent before being trained on a PDF and du
 
 <img height="200" src=./"DAPDF.png" />
 
-<img height="200" src="./DAPDFT.png" />
+<img height="200" src="/DAPDFT.png" />
 
 >**Agents must always be trained until the message below is shown. You can train your agent by clicking the button `Train Agent`**
 
-<img height="200" src="./Trained.png" />
+<img height="200" src="/Trained.png" />
