--- a/Data Modules/Generate File.mdx
+++ b/Data Modules/Generate File.mdx
@@ -12,4 +12,4 @@ The `Generate File` module has **variable inputs** and **one output**:
 - **Input**: Inputs can be of type `text` and `image`; you can add them in any specific to structure the document as you see fit
 - **Output**: `File`, the output is of a file type in the specified format
 
-<img height="200" src="GF.png" />
+<img height="200" src="/GF.png" />
