--- a/Data Modules/Scrape Web Page.mdx
+++ b/Data Modules/Scrape Web Page.mdx
@@ -11,4 +11,4 @@ The `Read Webpage` module has **one input** and **one output**:
 - **Input**: `URL`, the link to the webpage you want to scrape
 - **Output**: `Text`, the text that was extracted from the webpage
 
-<img height="200" src="WPR.png" />
+<img height="200" src="/WPR.png" />
