--- a/Integration Modules/GmailW.mdx
+++ b/Integration Modules/GmailW.mdx
@@ -14,4 +14,4 @@ The `Gmail Sender` module has **three inputs**:
 - **Input**: Multiple type `text` inputs can be received. The `recipient` represents the email or emails (if it is a list) to which you want to send the email. The `title` means the email's subject, and the `body` represents the body of the email.
 - **Config**: If the `draft` button is enabled, emails are kept as drafts in your inbox
 
-<img height="200" src="GmailW.png" />
+<img height="200" src="/GmailW.png" />
