--- a/Integration Modules/Google sheets reader.mdx
+++ b/Integration Modules/Google sheets reader.mdx
@@ -18,4 +18,4 @@ The `Google Sheets Reader` module has **variable outputs**:
 
 Find below an example of how you can upload a Google Sheets:
 
-<img height="200" src="GSReader.png"/>
+<img height="200" src="/GSReader.png"/>
