--- a/Integration Modules/TelegramW.mdx
+++ b/Integration Modules/TelegramW.mdx
@@ -14,4 +14,4 @@ The `Telegram Writer` module has **one input**:
 - **Input**: the `text` you want to send to a chat or group
 - **Config**: `chat id` of the group or chat
 
-<img height="200" src="TW.png" />
+<img height="200" src="/TW.png" />
