--- a/Logic Modules/Combine Text.mdx
+++ b/Logic Modules/Combine Text.mdx
@@ -18,8 +18,8 @@ In this example, each of the **six inputs** can be positioned in the text prompt
 
 In the text prompt, each input is represented as a variable inside brackets like these: `(( ))`
 
-<img height="200" src="CT.png" />
+<img height="200" src="/CT.png" />
 
 Combining text enables more complex workflows that utilize multiple layers of agents and AI models. For example: 
 
-<img height="200" src="Complex.png" />
+<img height="200" src="/Complex.png" />
