--- a/Integration Modules/Linked.mdx
+++ b/Integration Modules/Linked.mdx
@@ -5,4 +5,4 @@ description: 'You can access this page in settings to link all your accounts.'
 
 >**The integrations will only work if their respective authentication has been granted**
 
-<img height="200" src="Linked.png" />
+<img height="200" src="/Linked.png" />
