Um nome diferente as per Jorge

--- a/YFT.mdx
+++ b/YFT.mdx
@@ -28,3 +28,15 @@ This page will guide you through some basic video tutorials to help you start wi
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
+
+## Tutorial 3: Email Outreach Automation
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/cUmU-o0qgSk?si=buIB1aKIqc_vV1vv"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
