--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 title: Introduction
-description: '[Spot](www.getspot.io) is a no-code platform that enables you to automate workflows and construct AI tools and agents effortlessly. Enhance your workflows by integrating a variety of powerful tools, such as:'
+description: '[Spot](www.getspot.io) is a no-code platform that enables you to automate workflows and construct AI tools and agents effortlessly. Enhance your workflows by integrating a variety of powerful tools.'
 ---
 
-In this documentation we provide all the information you will need to become a master at using Spot. Below, you will find all the most important sections of the documentation and in the navigation bar on the left, you can find even more information about every module in the platform.
+This documentation provides all the information you need to become a master at Spot. Below, you will find all the most important sections of the documentation. In the navigation bar on the left, you can find even more information about every module on the platform.
 
 <CardGroup cols={2}>
   <Card
