--- a/Agents/DA.mdx
+++ b/Agents/DA.mdx
@@ -17,10 +17,10 @@ The `Documentation Agent` module has **one input** and **one output**:
 
 In the example below, you can find an agent before being trained on a PDF and during its training:
 
-<img height="200" src=./"DAPDF.png" />
+<img height="200" src="./DAPDF.png" />
 
-<img height="200" src="/DAPDFT.png" />
+<img height="200" src="./DAPDFT.png" />
 
 >**Agents must always be trained until the message below is shown. You can train your agent by clicking the button `Train Agent`**
 
-<img height="200" src="/Trained.png" />
+<img height="200" src="./Trained.png" />
