--- a/Logic Modules/Combine Text.mdx
+++ b/Logic Modules/Combine Text.mdx
@@ -7,7 +7,7 @@ The `Combine Text` module is fundamental for creating workflows; it mostly combi
 
 This is particularly useful when writing more complex prompts.
 
-The `Generate File` module has **variable inputs** and **one output**:
+The `Combine Text` module has **variable inputs** and **one output**:
 
 - **Input**: Can receive multiple inputs of type `text`; these can be used as a dynamic input inside the prompt of the Combine Text module. Just press `+` to add as many inputs as you want.
 - **Output**: `text`, the output is the prompt combined with the dynamic inputs.
