--- a/Data Modules/File to Text.mdx
+++ b/Data Modules/File to Text.mdx
@@ -1,12 +1,15 @@
 ---
-title: 'File to Text'
-description: 'Reads a file format input and extracts its text.'
+title: 'Read Document FIX'
+description: 'Reads a document format input and extracts its textual content.'
 ---
 
-The `Read Webpage` module is a data module that can extract the text from a specific URL.
-**You can use this module to provide live contextual information from a specific web page to an AI model.**
+The `Read Document` module is a data module that can read a document and extract all its textual content.
 
-The `Read Webpage` module has **one input** and **one output**:
+You can use this module to transform any document of `PDF`, `DOCX`, `TXT` into text.
 
-- **Input**: `URL`, the link to the webpage you want to scrape
-- **Output**: `Text`, the text that was extracted from the webpage
+The `Read Document` module has **one input** and **one output**:
+
+- **Input**: One input of type `Document`
+- **Output**: `Text`, the output is the text inside the document you provided
+
+<img height="200" src="/GF.png" />
