--- a/Data Modules/Generate File.mdx
+++ b/Data Modules/Generate File.mdx
@@ -1,15 +1,15 @@
 ---
-title: 'Generate File'
-description: 'Receives text and an image and converts those into a file.'
+title: 'Generate Document FIX'
+description: 'Create a text document containing the specified content.'
 ---
 
-The `Generate File` module is a data module that can convert text and images into a file.
+The `Generate Document` module is a data module that can convert text and images into a file.
 
 You can use this module to transform your AI-generated text into a file of `PDF`, `DOCX`, `TXT`, `CSV` and `HTML` types
 
-The `Generate File` module has **variable inputs** and **one output**:
+The `Generate Document` module has **variable inputs** and **one output**:
 
 - **Input**: Inputs can be of type `text` and `image`; you can add them in any specific to structure the document as you see fit
-- **Output**: `File`, the output is of a file type in the specified format
+- **Output**: `Document`, the output is of a file type in the specified format
 
 <img height="200" src="/GF.png" />
