--- a/Data Modules/File to Text.mdx
+++ b/Data Modules/File to Text.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Read Document FIX'
+title: 'Read Document'
 description: 'Reads a document format input and extracts its textual content.'
 ---
 
@@ -12,4 +12,4 @@ The `Read Document` module has **one input** and **one output**:
 - **Input**: One input of type `Document`
 - **Output**: `Text`, the output is the text inside the document you provided
 
-<img height="200" src="/GF.png" />
+<img height="200" src="/RF.png" />
