--- a/Data Modules/Generate File.mdx
+++ b/Data Modules/Generate File.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Generate Document FIX'
+title: 'Generate Document'
 description: 'Create a text document containing the specified content.'
 ---
 
@@ -12,4 +12,4 @@ The `Generate Document` module has **variable inputs** and **one output**:
 - **Input**: Inputs can be of type `text` and `image`; you can add them in any specific to structure the document as you see fit
 - **Output**: `Document`, the output is of a file type in the specified format
 
-<img height="200" src="/GF.png" />
+<img height="200" src="/GD.png" />
