--- a/Integration Modules/GDrive Reader.mdx
+++ b/Integration Modules/GDrive Reader.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Google Drive Reader FIX'
+title: 'Google Drive Reader'
 description: 'Grabs any documents you choose in Google Drive, ready for you to use.'
 ---
 
@@ -10,5 +10,3 @@ The `Google Drive Reader` module allows you read any text documents from your go
 The `Google Drive Reader` module has **one output**:
 
 - **Output**: Outputs a text document or a list of text documents 
-
-<img height="200" src="/GmailW.png" />
