--- a/Integration Modules/GDrive writer.mdx
+++ b/Integration Modules/GDrive writer.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Google Drive Writer FIX'
+title: 'Google Drive Writer'
 description: 'Saves files back into your Google Drive, wherever you want them to go.'
 ---
 
@@ -10,5 +10,3 @@ The `Google Drive Writer` module allows you to save any document to your Google 
 The `Google Drive Writer` module has **one output**:
 
 - **Output**: Outputs a text document or a list of text documents 
-
-<img height="200" src="/GmailW.png" />
