Name changes to modules

--- a/Data Modules/Generate File.mdx
+++ b/Data Modules/Generate File.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'Generate Document'
+title: 'Document Creator'
 description: 'Create a text document containing the specified content.'
 ---
 
-The `Generate Document` module is a data module that can convert text and images into a file.
+The `Document Creator` module is a data module that can convert text and images into a file.
 
 You can use this module to transform your AI-generated text into a file of `PDF`, `DOCX`, `TXT`, `CSV` and `HTML` types
 
-The `Generate Document` module has **variable inputs** and **one output**:
+The `Document Creator` module has **variable inputs** and **one output**:
 
 - **Input**: Inputs can be of type `text` and `image`; you can add them in any specific to structure the document as you see fit
 - **Output**: `Document`, the output is of a file type in the specified format
