--- a/Data Modules/File to Text.mdx
+++ b/Data Modules/File to Text.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'Read Document'
+title: 'Document Reader'
 description: 'Reads a document format input and extracts its textual content.'
 ---
 
-The `Read Document` module is a data module that can read a document and extract all its textual content.
+The `Document Reader` module is a data module that can read a document and extract all its textual content.
 
 You can use this module to transform any document of `PDF`, `DOCX`, `TXT` into text.
 
-The `Read Document` module has **one input** and **one output**:
+The `Document Reader` module has **one input** and **one output**:
 
 - **Input**: One input of type `Document`
 - **Output**: `Text`, the output is the text inside the document you provided
