--- a/Logic Modules/Filterlist.mdx
+++ b/Logic Modules/Filterlist.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Filter List FIX'
-description: 'Filter values using a specific condition or AI'
+title: 'Filter List'
+description: 'Filter values using a specific condition or AI.'
 ---
 
 The `Filter List` module is a logic module that can Filter values based on a specific condition or ask AI to filter it for you. This module is particularly useful when removing content from a list that fits a certain condition. 
