--- a/YFT.mdx
+++ b/YFT.mdx
@@ -5,19 +5,7 @@ description: 'Start using AI to automate your life in just 5 minutes'
 
 This page will guide you through some basic video tutorials to help you start with Spot workflow builder.
 
-## Tutorial 1: Meeting Transcript Summarizer
-
-<iframe
-  width="560"
-  height="315"
-  src="https://www.youtube.com/embed/-HcbcC6lD0Q?si=auDLrFDfU17OW0_f"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
-
-## Tutorial 2: Legal Documentation Expert
+## Tutorial 1, Basic Concepts: Combining Text, Agent and LLM Collaboration
 
 <iframe
   width="560"
@@ -29,7 +17,7 @@ This page will guide you through some basic video tutorials to help you start wi
   allowfullscreen
 ></iframe>
 
-## Tutorial 3: Email Outreach Automation
+## Tutorial 2, Basic Concepts: Using Integrations
 
 <iframe
   width="560"
@@ -40,3 +28,17 @@ This page will guide you through some basic video tutorials to help you start wi
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
+
+## Tutorial 3: Meeting Transcript Summarizer
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/-HcbcC6lD0Q?si=auDLrFDfU17OW0_f"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
+
+
