--- a/YFT.mdx
+++ b/YFT.mdx
@@ -5,7 +5,7 @@ description: 'Start using AI to automate your life in just 5 minutes'
 
 This page will guide you through some basic video tutorials to help you start with Spot workflow builder.
 
-## Tutorial 1, Basic Concepts: Combining Text, Agent and LLM Collaboration
+## Tutorial 1, Basic Concepts: Combining Text, AI Agent and AI-Model Collaboration
 
 <iframe
   width="560"
