--- a/Agents/DA.mdx
+++ b/Agents/DA.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Documentation Agent'
-description: 'This agent answers any question by learning from any source you give it.'
+description: 'This agent answers any question by learning from any text based source you give it.'
 ---
 
-The `Documentation Agent` is designed to effortlessly learn from various sources, including websites, Google Drive text files, and PDFs. 
+The `Documentation Agent` is designed to effortlessly learn from various sources, including Google Drive text files and PDFs. 
 
 It can swiftly respond to your queries, providing insights and finding specific information within these complex data sources.
 
