--- a/AI/AIVision.mdx
+++ b/AI/AIVision.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'AI Image Vision'
+title: 'Interpret Image'
 description: 'Analyzes images and answers questions using a Vision-capable Language Model model.'
 ---
 
-The `AI Image Vision` module leverages advanced Vision-enabled Language Models to interpret images and provide answers to user-submitted questions. Connect an image and a prompt containing your question, and the model will analyze the visual content to deliver accurate responses.
+The `Interpret Image` module leverages advanced Vision-enabled Language Models to interpret images and provide answers to user-submitted questions. Connect an image and a prompt containing your question, and the model will analyze the visual content to deliver accurate responses.
 
 **You can use this module to identify objects, understand contexts, or extract specific details; it offers a powerful way to interact with and gain insights from any image.**
 
-The `AI Image Vision` module has **two inputs** and **one output**:
+The `Interpret Image` module has **two inputs** and **one output**:
 
 - **Input**: `Prompt` and `Image`, a prompt containing any specific question or insight you want to take from the image.
 - **Output**: `Text`, returns an answer to the request specified in the prompt.
