--- a/Logic Modules/Filterlist.mdx
+++ b/Logic Modules/Filterlist.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Filter List'
-description: 'Filter values using a specific condition or AI.'
+title: 'Filter List Values'
+description: 'Filter values base on a specific condition or ask AI to filter it for you.'
 ---
 
 The `Filter List` module is a logic module that can Filter values based on a specific condition or ask AI to filter it for you. This module is particularly useful when removing content from a list that fits a certain condition. 
@@ -10,10 +10,9 @@ The `Filter List` module has **one input** and **one output**:
 - **Input**: `list`, receives any list
 - **Output**: `list`, the list filtered out according to the defined condition.
 
-In this module, you two `Configurations`:
+In this module, there are two `Configurations`:
 
 - **AI Condition**: This allows you to use AI to filter your values. All you have to do is describe the filter condition, `E.g., Exclude all values written in Portuguese.`
 - **Value Type**: This allows you to select the type of value you are filtering, whether it is `Number` or `Text`, and apply specific conditions to each type 
 
 <img height="200" src="/FList.png" />
-
