--- a/AI/AI Image Generation.mdx
+++ b/AI/AI Image Generation.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'AI Image Generation'
+title: 'Generate Image'
 description: 'Create images using any state-of-the-art image generation AI models.'
 ---
 
-The `AI Image Generation` module can use any of the state-of-the-art AI models to generate images. 
+The `Generate Image` module can use any of the state-of-the-art AI models to generate images. 
 
 **You can use this module to enhance your creativity and build logos, photos, and article images**
 
-The `AI Image Generation` module has **one input** and **one output**:
+The `Generate Image` module has **one input** and **one output**:
 
 - **Input**: `Prompt` describes the image the model should generate, including artistic references and styles.
 - **Output**: `Image`, returns the output from the AI model based on the `Prompt` inputs provided.
