--- a/AI/AI Image Transformation.mdx
+++ b/AI/AI Image Transformation.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'AI Image Transformation'
+title: 'Transform Image'
 description: 'Generate or transform images using source images and advanced techniques such as style transfer or conditional generation.'
 ---
 
-The `AI Image Transformation` module can use any of the state-of-the-art AI models to generate images from another image and a prompt instruction. 
+The `Transform Image` module can use any of the state-of-the-art AI models to generate images from another image and a prompt instruction. 
 
 **You can use this module to change the style of your photos, create alternative images of your face, and much more**
 
-The `AI Image Transformation` module has **two inputs** and **one output**:
+The `Transform Image` module has **two inputs** and **one output**:
 
 - **Input**: `Prompt`, describes the image the model should generate, including artistic references and styles.
 - **Output**: `Image`, returns the output from the AI model based on the `Prompt` inputs provided.
