--- a/Agents/DA.mdx
+++ b/Agents/DA.mdx
@@ -1,26 +1,26 @@
 ---
-title: 'Documentation Agent'
-description: 'This agent answers any question by learning from any text based source you give it.'
+title: 'Document Q&A'
+description: 'This AI module answers any question by learning from any text based source you give it.'
 ---
 
-The `Documentation Agent` is designed to effortlessly learn from various sources, including Google Drive text files and PDFs. 
+The `Document Q&A` is designed to effortlessly learn from various sources, including Google Drive text files and PDFs. 
 
 It can swiftly respond to your queries, providing insights and finding specific information within these complex data sources.
 
->**This agent is particularly useful when you want to build a workflow that is capable of answering complete questions from long books or documents**
+>**This AI action is particularly useful when you want to build a workflow that is capable of answering complete questions from long books or documents**
 
-The `Documentation Agent` module has **one input** and **one output**:
+The `Document Q&A` module has **one input** and **one output**:
 
-- **Input**: Can receive an input of type `text` with a prompt to be answered according to the data sources provided to the agent
+- **Input**: Can receive an input of type `text` with a prompt to be answered according to the data sources provided to the AI action
 - **Output**: The output is of type `text` and answers to the prompt question in the input variable
 - **Config**: In the configurations menu, the model can be trained on PDFs and files located on Google Drive or a website.
 
-In the example below, you can find an agent before being trained on a PDF and during its training:
+In the example below, you can find an AI action before being trained on a PDF and during its training:
 
 <img height="200" src="/DAPDF.png" />
 
 <img height="200" src="/DAPDFT.png" />
 
->**Agents must always be trained until the message below is shown. You can train your agent by clicking the button `Train Agent`**
+>**AI actions must always be trained until the message below is shown. You can train your AI action by clicking the button `Train`**
 
 <img height="200" src="/Trained.png" />
