--- a/Agents/WCA.mdx
+++ b/Agents/WCA.mdx
@@ -1,16 +1,18 @@
 ---
-title: 'Website Crawler Agent'
-description: 'Website Crawler Agent navigates and does an in-depth analysis of websites'
+title: 'Website Q&A'
+description: 'Website Q&A navigates and does an in-depth analysis of websites'
 ---
 
-The `Website Crawler Agent` is designed to explore and learn from websites meticulously.
+The `Website Q&A` is designed to explore and learn from websites meticulously.
 
 It can swiftly build reports, summaries and provide insights into complex websites.
 
->**This agent is especially useful for conducting thorough competitor analysis and extracting specific data from complex websites.**
+>**This AI module is especially useful for conducting thorough competitor analysis and extracting specific data from complex websites.**
 
-The `Website Crawler Agent` module has **one input** and **one output**:
+The `Website Q&A` module has **one input** and **one output**:
 
-- **Input**: Can receive an input of type `text` with a prompt to be answered according to the data sources provided to the agent
+- **Input**: Can receive an input of type `text` with a prompt to be answered according to the data sources provided to the AI module
 - **Output**: The output is of type `text` and answers to the prompt question in the input variable
-- **Config**: In the configurations menu, you can train the agent on any website link that doesn't have scrapping protections.
+- **Config**: In the configurations menu, you can train the AI module on any website link that doesn't have scrapping protections.
+
+<img height="200" src="/WQA.png" />
