--- a/AI/Form.mdx
+++ b/AI/Form.mdx
@@ -12,5 +12,5 @@ The `Fill Form` module has **two inputs** and **one output**:
     - `Information` all the information needed to fill the PDF form.
 - **Output**: `PDF`, PDF document in form format with all the information filled in the form input.
 
-<img height="200" src="/Trans.png" />
+<img height="200" src="/Form.png" />
 
