--- a/Integration Modules/Google sheets reader.mdx
+++ b/Integration Modules/Google sheets reader.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Google Sheets Reader'
+title: 'Google Sheets - Read from Columns'
 description: 'Peeks into your Google Spreadsheets and grabs the data you need for analysis or reports.'
 ---
 
@@ -7,11 +7,11 @@ description: 'Peeks into your Google Spreadsheets and grabs the data you need fo
 
 <img height="200" src="GSR.png" />
 
-The `Google Sheets Reader` module allows you to read data from Google Sheets. 
+The `Google Sheets - Read from Columns` module allows you to read data from Google Sheets. 
 
 **Google Sheets are processed by column; you must maintain the first row of the Google Sheets for the headers where each column represents a variable.**
 
-The `Google Sheets Reader` module has **variable outputs**:
+The `Google Sheets - Read from Columns` module has **variable outputs**:
 
 - **Outputs**: Each column header in the first row of the google sheets represents a `variable output` with a list composed of all the rows in each column.
 - **Config**: The Google Sheets file can be loaded with a link or via the Google Finder
