--- a/Integration Modules/GDrive Reader.mdx
+++ b/Integration Modules/GDrive Reader.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Google Drive Reader'
+title: 'Google Drive - Read Files'
 description: 'Grabs any documents you choose in Google Drive, ready for you to use.'
 ---
 
 >**This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
 
-The `Google Drive Reader` module allows you read any text documents from your google drive. 
+The `Google Drive - Read Files` module allows you read any text documents from your Google Drive. 
 
-The `Google Drive Reader` module has **one output**:
+The `Google Drive - Read Files` module has **one output**:
 
-- **Output**: Outputs a text document or a list of text documents 
+- **Output**: Outputs a text document or a list of text documents inside a folder
