--- a/Integration Modules/GDrive writer.mdx
+++ b/Integration Modules/GDrive writer.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Google Drive Writer'
+title: 'Google Drive - Save to Folder'
 description: 'Saves files back into your Google Drive, wherever you want them to go.'
 ---
 
 >**This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
 
-The `Google Drive Writer` module allows you to save any document to your Google Drive. 
+The `Google Drive - Save to Folder` module allows you to save any document to your Google Drive. 
 
-The `Google Drive Writer` module has **one output**:
+The `Google Drive - Save to Folder` module has **one output**:
 
-- **Output**: Outputs a text document or a list of text documents 
+- **Output**: Outputs a text document or a list of text documents
