--- a/Integration Modules/Google sheets writer.mdx
+++ b/Integration Modules/Google sheets writer.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Google Sheets Writer'
+title: 'Google Sheets - Write in Columns'
 description: 'Write values across any columns of your Google Sheets.'
 ---
 
@@ -7,14 +7,13 @@ description: 'Write values across any columns of your Google Sheets.'
 
 <img height="200" src="GSW.png" />
 
-The `Google Sheets Writer` module allows you to write data using Google Sheets. 
+The `Google Sheets - Write in Columns` module allows you to write data using Google Sheets. 
 
 **Google Sheets are processed by column; you must maintain the first row of the Google Sheets for the headers where each column represents a variable.**
 
 **To better use this module, you should create empty columns in Google Sheets and write the information you have processed in the workflow into those columns**
 
-The `Google Sheets writer` module has **variable inputs**:
+The `Google Sheets - Write in Columns` module has **variable inputs**:
 
 - **Inputs**: Each column header in the first row of the Google Sheets represents a `variable input` that receives a list to be written in each Google Sheets column.
 - **Config**: The Google Sheets file can be loaded with a link or via the Google Finder
-
