--- a/Integration Modules/ReadR.mdx
+++ b/Integration Modules/ReadR.mdx
@@ -1,17 +1,20 @@
 ---
-title: 'Airtable - Read Records TODO'
-description: 'Read data directly from a Notion Database.'
+title: 'Airtable - Read Records'
+description: 'Read data directly from an Airtable.'
 ---
 
 >**This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
 
-The `Notion - Read Database` module seamlessly retrieves data from your Notion workspace by reading directly from specified databases. Automates workflows by extracting and accessing records from Notion tables, ensuring you have the most up-to-date information.
+The `Airtable - Read Records` module peeks into Airtable bases and pulls the data needed for analysis or reports.
 
-The `Notion - Read Database` module has **variable outputs**:
+The `Airtable - Read Records` module has **variable outputs**:
 
-- **Outputs**: Each column header in the first row of the Notion Database represents a `variable output` with a list composed of all the rows in each column.
-- **Config**: The Notion Page from the Notion workspace can be selected from the dropdown of approved access pages. If a page is not available in the drop-down, use the button `Import other pages`
+- **Outputs**: Each column header in the first row of the Airtable represents a `variable output` with a list composed of all the rows in each column.
+- **Config**:
+     - `Read Public Table` - It reads all the columns from a public Airtable URL
+     - `Base` - Select the `Base` from an Airtable account
+     - `Table` - Select the `Table` from the previously defined `Base`
 
-Find below an example of how you use this module:
+Find below an example of how to use this module:
 
-<img height="200" src="/NReaddatabase.png"/>
+<img height="200" src="/AReadR.png"/>
