--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: '[Spot](www.getspot.io) is a no-code platform that enables you to automate workflows and construct AI tools and agents effortlessly. Enhance your workflows by integrating a variety of powerful tools.'
+description: '[Spot](www.getspot.io) is a no-code platform that enables you to automate workflows and build AI tools effortlessly. Enhance your workflows by integrating a variety of powerful tools.'
 ---
 
 This documentation provides all the information you need to become a master at Spot. Below, you will find all the most important sections of the documentation. In the navigation bar on the left, you can find even more information about every module on the platform.
@@ -20,25 +20,33 @@ This documentation provides all the information you need to become a master at S
   >
     Learn more about the canvas in which you can build your apps and workflows 
   </Card>
+    <Card
+    title="AI Modules"
+    icon="stars"
+    href="AI/AI Text Creation"
+  >
+    Learn more about how to leverage different AI tools in your workflows
+  </Card>
+<Card
+    title="Prompt Guide"
+    icon="text"
+    href="Prompt/Overview"
+  >
+    Learn more about how to write a prompt for your use case
+  </Card>
+    <Card
+    title="Data Modules"
+    icon="file"
+    href="Data Modules/Scrape Web Page"
+  >
+    Learn how to connect external data to your workflows 
+  </Card>
   <Card
     title="Integrations"
     icon="link"
-    href="Integration Modules"
+    href="Integration Modules/GmailW"
   >
-    Customize your docs to your company's colors and brands
+    Learn how to connect external tools to your workflows
   </Card>
-  <Card
-    title="Agents"
-    icon="Robot"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="AI Models"
-    icon="stars"
-    href="AI"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
+
 </CardGroup>
