--- a/Prompt/assign-role-to-ai.mdx
+++ b/Prompt/assign-role-to-ai.mdx
@@ -2,7 +2,7 @@
 title: 'Assign a Role to AI'
 ---
 
-Transforming your AI from a general assistant to a specialized expert is straightforward with Spot's **Context** prompt. By defining a specific role within the **Context** text box available in all AI modules, you can tailor the AI's expertise, tone, and focus to meet your unique needs.
+Transforming your AI from a general assistant to a specialized expert is straightforward with Noxus's **Context** prompt. By defining a specific role within the **Context** text box available in all AI modules, you can tailor the AI's expertise, tone, and focus to meet your unique needs.
 
 ## Why Assign a Role to Your AI?
 
