--- a/Triggers/ST.mdx
+++ b/Triggers/ST.mdx
@@ -5,7 +5,7 @@ description: 'This trigger allows users to start a workflow from Slack'
 
 A `Slack trigger` interface allows users to run workflows seamlessly and directly from `Slack`. Triggers on `Slack` can be set based on a mention, channel, keyword, or combination.
 
-**You can use this feature to create your assistant directly on Slack. Remember that you have to invite the Spotbot into the channels where you want to run the workflow**
+**You can use this feature to create your assistant directly on Slack. Remember that you have to invite the Noxusbot into the channels where you want to run the workflow**
 
 The `Slack Trigger` function has the following configs and inputs:
 
