--- a/Workflow Builder.mdx
+++ b/Workflow Builder.mdx
@@ -5,7 +5,7 @@ description: 'Start using AI to automate your life in just 5 minutes'
 
 ## 1. What is it?
 
-The workflow builder is one of the core tools in Spot's platform. This is where you build, run, deploy, and share your AI workflows and tools.
+The workflow builder is one of the core tools in Noxus's platform. This is where you build, run, deploy, and share your AI workflows and tools.
 
 To access the workflow builder, click "Create New Flow" on the page "My flows".
 
