--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 title: Introduction
-description: '[Spot](www.getspot.io) is a no-code platform that enables you to automate workflows and build AI tools effortlessly. Enhance your workflows by integrating a variety of powerful tools.'
+description: '[Noxus](www.getNoxus.io) is a no-code platform that enables you to automate workflows and build AI tools effortlessly. Enhance your workflows by integrating a variety of powerful tools.'
 ---
 
-This documentation provides all the information you need to become a master at Spot. Below, you will find all the most important sections of the documentation. In the navigation bar on the left, you can find even more information about every module on the platform.
+This documentation provides all the information you need to become a master at Noxus. Below, you will find all the most important sections of the documentation. In the navigation bar on the left, you can find even more information about every module on the platform.
 
 <CardGroup cols={2}>
   <Card
