--- a/YFT.mdx
+++ b/YFT.mdx
@@ -3,7 +3,7 @@ title: 'Your First Tutorial'
 description: 'Start using AI to automate your life in just 5 minutes'
 ---
 
-This page will guide you through some basic video tutorials to help you start with Spot workflow builder.
+This page will guide you through some basic video tutorials to help you start with Noxus workflow builder.
 
 ## Tutorial 1, Basic Concepts: Combining Text, AI Agent and AI-Model Collaboration
 
