fix: update docs

--- a/api-reference/v1/create-run-with-api-key.mdx
+++ b/api-reference/v1/create-run-with-api-key.mdx
@@ -1,5 +1,3 @@
 ---
-openapi: post /v1/workflows/{workflow_id}/run
-title: "Create Async Run"
-description: "Create a run for a specific workflow asynchronously"
+openapi: post /v1/workflows/{workflow_id}/runs
 ---
