--- a/api-reference/v1/create-sync-run.mdx
+++ b/api-reference/v1/create-sync-run.mdx
@@ -1,5 +1,3 @@
 ---
-openapi: post /v1/workflows/{workflow_id}/run/sync
-title: "Create Sync Run"
-description: "Create a run for a specific workflow synchronously"
+openapi: post /v1/workflows/{workflow_id}/runs/sync
 ---
