--- a/api-reference/v1/get-runs-public.mdx
+++ b/api-reference/v1/get-runs-public.mdx
@@ -1,5 +1,3 @@
 ---
-openapi: get /v1/workflows/{workflow_id}/run
-title: "Get Runs"
-description: "Get a list of runs for a specific workflow"
+openapi: get /v1/workflows/{workflow_id}/runs
 ---
