fix: update documentation endpoints description

--- a/api-reference/v1/public-get-run-by-id-and-workflow.mdx
+++ b/api-reference/v1/public-get-run-by-id-and-workflow.mdx
@@ -1,4 +1,5 @@
 ---
 openapi: get /v1/workflows/{workflow_id}/runs/{run_id}
-title: Get Run by ID and Workflow
+title: Get Run 
+description: Get a run by it's ID
 ---
