--- a/api-reference/v1/public-refresh-message.mdx
+++ b/api-reference/v1/public-refresh-message.mdx
@@ -1,4 +1,5 @@
 ---
 openapi: post /v1/conversation/{conversation_id}/messages/{message_id}/refresh
 title: Refresh Message
+description: Refresh a message
 ---
