--- a/api-reference/v1/public-add-knowledge-base-document.mdx
+++ b/api-reference/v1/public-add-knowledge-base-document.mdx
@@ -1,4 +1,5 @@
 ---
 openapi: post /v1/knowledge-bases/{knowledge_base_id}/document
 title: Add Knowledge Base Document
+description: Add a document to a knowledge base
 ---
