--- a/api-reference/v1/public-get-knowledge-base.mdx
+++ b/api-reference/v1/public-get-knowledge-base.mdx
@@ -1,4 +1,5 @@
 ---
 openapi: get /v1/knowledge-bases/{knowledge_base_id}
 title: Get Knowledge Base
+description: Get a knowledge base by it's ID
 ---
