--- a/api-reference/v1/public-update-knowledge-base.mdx
+++ b/api-reference/v1/public-update-knowledge-base.mdx
@@ -1,4 +1,5 @@
 ---
 openapi: patch /v1/knowledge-bases/{knowledge_base_id}
 title: Update Knowledge Base
+description: Update a knowledge base
 ---
