fix: broken link

--- a/Documentation/Integration Modules/GmailR.mdx
+++ b/Documentation/Integration Modules/GmailR.mdx
@@ -27,4 +27,4 @@ The `Gmail - Read Emails` module has **six outputs**:
   - `Read Attachments` - Toggle to select wether attachments are read or not in each email
   - `Read only unread emails` - Read only unread emails in your inbox
 
-<img height="200" src="/imags/GR.png" />
+<img height="200" src="/images/GR.png" />
