fix: broken link

--- a/Documentation/Integration Modules/Google sheets writer.mdx
+++ b/Documentation/Integration Modules/Google sheets writer.mdx
@@ -5,7 +5,7 @@ description: 'Write values across any columns of your Google Sheets.'
 
 >**This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
 
-<img height="200" src="GSW.png" />
+<img height="200" src="/images/GSW.png" />
 
 The `Google Sheets - Write in Columns` module allows you to write data using Google Sheets. 
 
